--- a/resources/assets/styles/layouts/_singleproduct.scss
+++ b/resources/assets/styles/layouts/_singleproduct.scss
@@ -7,7 +7,7 @@
     row-gap: 2rem;
 
     @include media-breakpoint-down(sm) {
-      row-gap: 1.5rem;
+      row-gap: 0;
     }
 
     @include media-breakpoint-down(sm) {
